# unstuck-sensei

./: .env.example  .gitignore  C1_MVP_Scope_AI_Start_Coach.docx  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: verify-auth.mjs  verify-rls.mjs
src/: App.test.tsx  App.tsx  main.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/detection/: mod.rs  platform.rs
src-tauri/src/timer/: mod.rs
todos/: 001-ready-p1-phase1-foundation-execution.md  002-complete-p1-database-schema-hardening.md  003-complete-p1-csp-and-env-validation.md  004-complete-p2-tray-menu-simplification.md  004-pending-p2-tray-menu-simplification.md  005-complete-p2-auth-hook-fixes.md  005-pending-p2-auth-hook-fixes.md  006-complete-p2-rls-performance-and-build-target.md  006-pending-p2-rls-performance-and-build-target.md  007-pending-p3-ui-polish-and-consistency.md  008-complete-p1-phase-2a-detection-infrastructure.md  009-complete-p1-state-machine-transition-guards.md  010-complete-p2-detection-sync-error-swallowing.md  011-complete-p2-reduce-detection-command-lock-boilerplate.md  015-complete-p2-stale-suppression-reasons-on-disable.md  016-complete-p3-detection-test-edge-cases.md  019-complete-p3-unbounded-app-switches-vecdeque.md  029-complete-p2-duplicated-invoke-handler-lib-rs.md  030-complete-p3-effect-execution-resilience.md  032-complete-p3-consolidate-disable-cleanup.md  035-complete-p1-phase-2d-suppression-and-tray-integration.md  048-complete-p1-input-length-limits-serverless.md  049-complete-p1-rate-limiter-bypass.md  058-complete-p2-migration-duplicate-constraints.md  059-complete-p2-migration-backfill-race.md  080-complete-p2-recoverable-flag-drops-retryable-errors.md  085-complete-p2-raw-anthropic-errors-exposed-to-users.md  088-complete-p2-sanitize-client-database-errors.md  097-complete-p3-isolate-timer-countdown-rerenders.md  098-complete-p3-deduplicate-timer-grace-and-parser-helpers.md  (+2 more)
vercel-api/: package.json  (+1 more)
(+72 files in other folders)
