[package]
name = "unstuck-sensei"
version = "0.1.0"
description = "Unstuck Sensei desktop foundation"
authors = ["Piotr Kreglicki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unstuck_sensei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-secure-storage = "1.4.0"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSDictionary", "NSNotification", "NSOperation", "NSString", "block2"] }
tokio = { version = "1", features = ["time"] }
